# grpc-torchserve

./: .gitignore  .gitmodules  Dockerfile  README.md  config.properties  demo.py  pyproject.toml  requirements.txt
api-docs/: inference.json  management.json
config/: config.properties  model-config.yaml
proto/: inference.proto  management.proto
requirements/: grpc.txt  torch_linux_cpu.txt  torchserve.txt
scripts/: archive-model.sh  gen-grpc.sh  start-serve.sh
src/grpc_python/: __init__.py  grpc_client.py  inference_pb2.py  inference_pb2_grpc.py  management_pb2.py  management_pb2_grpc.py
src/handlers/: custom_handler.py
src/ts_scripts/: install_dependencies.py  print_env_info.py  utils.py
